feat: versão final

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDbContext": "server=localhost;port=3306;database=trabalhofinal;uid=root;pwd=12345678;"
+    "MyDbContext": "server=localhost;port=3306;database=ebertian;uid=root;pwd=12345678;"
   } 
 }
